fix: apply CodeRabbit auto-fixes
Fixed 11 file(s) based on 12 unresolved review comments.

Co-authored-by: CodeRabbit <noreply@coderabbit.ai>